--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,12 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <!--Text-->
+    <color name="textPrimary">#212121</color>
+    <color name="textSecondary">@color/grey_600</color>
+
+    <!--Grey-->
+    <color name="grey_600">#757575</color>
+
 </resources>
