--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -14,7 +14,15 @@
         <item name="android:fontFamily">@font/medium</item>
     </style>
 
+    <style name="FallingWords.Text.Medium.Headline5">
+        <item name="android:textSize">@dimen/text_size_xxx_large</item>
+    </style>
+
     <style name="FallingWords.Text.Medium.Headline6">
+        <item name="android:textSize">@dimen/text_size_x_large</item>
+    </style>
+
+    <style name="FallingWords.Text.Medium.Headline7">
         <item name="android:textSize">@dimen/text_size_large</item>
     </style>
 
@@ -31,11 +39,24 @@
     </style>
 
     <!--=============================-->
-    <!--    Styles related to Button   -->
+    <!--   Styles related to Button  -->
     <!--=============================-->
 
     <style name="FallingWords.Button">
         <item name="android:fontFamily">@font/medium</item>
+    </style>
+
+    <style name="FallingWords.Button.Positive" parent="Widget.MaterialComponents.Button.TextButton.Dialog">
+        <item name="android:fontFamily">@font/medium</item>
+        <item name="android:textColor">@color/green_700</item>
+    </style>
+
+    <!--================================-->
+    <!-- Styles related to Alert Dialog -->
+    <!--================================-->
+
+    <style name="FallingWords.AlertDialog" parent="Theme.MaterialComponents.DayNight.Dialog.Alert">
+        <item name="buttonBarPositiveButtonStyle">@style/FallingWords.Button.Positive</item>
     </style>
 
 </resources>
